--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="home.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="mens.html">Men's</a>
@@ -76,7 +76,7 @@
                 <img src="images/about_banner.jpg" class=" img-fluid w-100" alt="">
             </div>
             <div class="banner_breadcrumb">
-                <a href="home.html">home</a>
+                <a href="index.html">home</a>
                 <p class="d-inline">» About US </p>
             </div>
         </div>
