--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!--Header Top-->
-    <div class="header_top clearfix">
+    <section class="header_top clearfix">
         <div class="container">
             <div class="header_top_icon">
                 <a href="">
@@ -27,13 +27,13 @@
                 </a>
             </div>
         </div>
-    </div>
+    </section>
     <!--Header Top-->
     <!--Header Start-->
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="home.html">
+                <a class="navbar-brand" href="index.html">
                     <img src="images/logo.png" class="img-fluid" alt="trendz" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
@@ -42,7 +42,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="home.html">Home</a>
+                            <a class="nav-link active" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="mens.html">Men's</a>
