--- a/mens.html
+++ b/mens.html
@@ -33,7 +33,7 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="home.html">
+                <a class="navbar-brand" href="index.html">
                     <img src="images/logo.png" class="img-fluid" alt="trendz" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
@@ -42,7 +42,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="home.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="mens.html">Men's</a>
@@ -76,7 +76,7 @@
                 <img src="images/men-banner.jpg" class="img-fluid w-100" alt="">
             </div>
             <div class="banner_breadcrumb">
-                <a href="home.html">home</a>
+                <a href="index.html">home</a>
                 <p class="d-inline">» Men's Clothing </p>
             </div>
         </div>
