--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                                 be dazzled !
                             </p>
                             <div class="about_us_img">
-                                <img src="images/about_img.jpg" alt="">
+                                <img src="images/about_img.jpg" class="img-fluid" alt="">
                                 <ul class="about_img_overlay">
                                     <li>
                                         <h2>what</h2>
